--- a/index.html
+++ b/index.html
@@ -17,14 +17,28 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    Equilibrium #3429 Our Equilibrium collection promotes balance and calm.
-    0.041 ETH 3 days left Creation of Jules Wyvern
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <main>
+      <section class="nft-card">
+        <img src="./images/image-equilibrium.jpg" alt="equilibrium" />
+        <h1 class="title">Equilibrium #3429</h1>
+        <p class="subtitle">
+          Our Equilibrium collection promotes balance and calm.
+        </p>
+        <ul>
+          <li>
+            <img src="./images/icon-ethereum.svg" alt="ethereum" />
+            <p>0.041 ETH</p>
+          </li>
+          <li>
+            <img src="./images/icon-clock.svg" alt="clock" />
+            <p>3 days left</p>
+          </li>
+        </ul>
+        <div class="author">
+          <img src="./images/image-avatar.png" alt="avatar" />
+          <p>Creation of Jules Wyvern</p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
