--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
   <body>
     <main>
       <section class="nft-card">
-        <img src="./images/image-equilibrium.jpg" alt="equilibrium" />
+        <div class="main-image">
+          <img src="./images/image-equilibrium.jpg" alt="equilibrium" />
+          <div class="hover-image"></div>
+        </div>
         <h1 class="title">Equilibrium #3429</h1>
         <p class="subtitle">
           Our Equilibrium collection promotes balance and calm.
         </p>
-        <ul>
+        <ul class="price-n-time">
           <li>
             <img src="./images/icon-ethereum.svg" alt="ethereum" />
             <p>0.041 ETH</p>
@@ -34,9 +37,10 @@
             <p>3 days left</p>
           </li>
         </ul>
+        <div class="line"></div>
         <div class="author">
           <img src="./images/image-avatar.png" alt="avatar" />
-          <p>Creation of Jules Wyvern</p>
+          <p>Creation of <span>Jules Wyvern</span></p>
         </div>
       </section>
     </main>
